issue22/k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: wordpress

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
        - name: nginx
          image: issue22/nginx:v1.0.0
          ports:
            - containerPort: 80
          volumeMounts:
            - name: php-socket
              mountPath: "/var/run"
            - name: documentroot
              mountPath: "/var/www/dev-k8s.techbull.cloud"
        - name: app
          image: issue22/app:v1.0.0
          volumeMounts:
            - name: php-socket
              mountPath: "/var/run"
            - name: documentroot
              mountPath: "/var/www/dev-k8s.techbull.cloud"
      volumes:
        - name: php-socket
          emptyDir: {}
        - name: documentroot
          emptyDir: {}
